--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,5 +30,5 @@
     "containerEnv": {
         "DISPLAY": ":0"
     },
-    "postStartCommand": "if ! [ -f Cargo.toml ] ; then sudo chown -R build:build . ; cargo init ; fi"
+    "postStartCommand": "if ! [ -f Cargo.toml ] ; then sudo chown -R build:build /home/build/rsproject ; cargo init ; fi"
 }
